avatar alignment fix

--- a/client/styles/pages/validators.scss
+++ b/client/styles/pages/validators.scss
@@ -54,8 +54,9 @@
 // avatar div
 .user-avatar{
   width: 1.5em !important;
-  height: auto !important;
-  padding-right: 10px !important;
+  height: 1.5em !important;
+  margin-top: 0px !important;
+
 }
 
 .Jdenticon{
